Kubernetes/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  # labels dan selector di service harus sama
  labels:
    app: order-service
  name: order-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      # labels dan selector di service harus sama
      labels:
        app: order-service
    spec:
      containers:
      # image yang ada di github packages, images harus bersifat public supaya bisa digunakan di dalam cluster kubernetes
      - image: ghcr.io/ilhamdwik/order-service:latest
        name: order-service
        # port yg digunakan di dalam container
        ports:
        - containerPort: 3000  # Port aplikasi backend
        resources: {}
status: {}
