Kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  # nama dari gateway istio
  - test-gateway
  http:
  - match:
    - uri:
        exact: /order
    #- uri:
    #    prefix: /static
    #- uri:
    #    exact: /login
    #- uri:
    #    exact: /logout
    #- uri:
    #    prefix: /api/v1/products
    route:
    - destination:
        # host sesuai nama service dari deployment order-service
        host: order-service.default.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
spec:
  hosts:
  - "*"
  gateways:
  # nama dari gateway istio
  - test-gateway
  http:
  - match:
    - uri:
        exact: /shipping
    #- uri:
    #    prefix: /static
    #- uri:
    #    exact: /login
    #- uri:
    #    exact: /logout
    #- uri:
    #    prefix: /api/v1/products
    route:
    - destination:
        # host sesuai nama service dari deployment shipping-service
        host: shipping-service.default.svc.cluster.local
        port:
          number: 3001
